--- a/templates/gear/gear_edit.html
+++ b/templates/gear/gear_edit.html
@@ -44,7 +44,7 @@
             <div class="input-group-prepend">
             <span class="input-group-text">Name</span>
             </div>
-            <input name="name" type="text" placeholder="{{ gearset.name }}  " class="form-control" aria-label="Gearset Name" required>
+            <input name="name" type="text" placeholder="{{ gearset.name }}" value="{{ gearset.name }}" class="form-control" aria-label="Gearset Name" required>
         </div>
     </div>
     <div class="container">
