--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head> 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XIVPlanner</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" 
-    rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/stylesheets/style.css">
 </head>
 
@@ -18,8 +17,8 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            {% if g.user.gearsets %}
-              <ul class="navbar-nav mb-2 mr-5">
+            <ul class="navbar-nav">
+              {% if g.user.gearsets %}
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Gear Planner
@@ -32,72 +31,71 @@
                     {% endfor %}
                   </ul>
                 </li>
-              </ul>
-            {% else %}
-            <ul class="navbar-nav me-auto mb-2">
-              <li class="nav-item">
-                <a class="nav-link" href="/gearset">Gear Planner</a>
+              {% else %}
+                <li class="nav-item">
+                  <a class="nav-link" href="/gearset">Gear Planner</a>
+                </li>
+              {% endif %}
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Characters
+                </a>
+                  <ul class="dropdown-menu dropdown-menu-end" style="height: 300px; overflow-y: scroll;">
+                    {% if g.user.character %}
+                      {% for character in g.user.character %}
+                        <li><a class="dropdown-item" href="/character/id/{{ character.character_id }}">{{ character.name }} - {{ character.server }}</a></li>
+                      {% endfor %}
+                    {% else %}
+                      <li><a class="dropdown-item">No Linked Characters</a></li>
+                    {% endif %}
+                  </ul>
               </li>
-            </ul>
-            {% endif %}
-            {% if g.user.following %}
-            <ul class="navbar-nav mb-2 mr-5">
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Following
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end" style="height: 300px; overflow-y: scroll;">
-                  {% for follow in g.user.following %}
-                    <li><a class="dropdown-item" href="/character/id/{{ follow.char_being_followed_id }}">{{ follow.char_being_followed_name }} - {{ follow.char_being_followed_server }}</a></li>
-                  {% endfor %}
+                  {% if g.user.following %}
+                    {% for follow in g.user.following %}
+                      <li><a class="dropdown-item" href="/character/id/{{ follow.char_being_followed_id }}">{{ follow.char_being_followed_name }} - {{ follow.char_being_followed_server }}</a></li>
+                    {% endfor %}
+                  {% else %}
+                    <li><a class="dropdown-item">No Followed Characters</a></li>
+                  {% endif %}
                 </ul>
               </li>
             </ul>
-            {% endif %}
-            <div class="container">
-              <form action="/search" role="search" method="GET">
-                <div class="row g-0">
-                  <div class="col d-inline">
-                    <input type="search" class="form-control-sm-2 w-100" name="term" placeholder="Search for a player" id="search-input" required>
-                  </div>
-                  <div class="col d-inline">
-                    <button>
-                      <i class="fa-solid fa-magnifying-glass"></i>
-                    </button>
-                  </div>
-                </div>
+            <ul class="navbar-nav" style="margin-left: 100px;">
+              <form class="d-flex" style="width: 400px;" role="search" action="/search" method="GET">
+                <input class="form-control me-2" type="search" placeholder="Search for a player" aria-label="Search" name="term" style="height: 30px;" required>
+                <button class="btn btn-outline-success" type="submit" style="height: 30px; padding-top: 2px;">Search</button>
               </form>
-            </div>
+            </ul>
             {% if g.user %}
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        {{g.user.username}}
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-end">
-                          {% if g.user.character %}
-                            {% for character in g.user.character %}
-                            <li><a class="dropdown-item" href="/character/id/{{ character.character_id }}">{{ character.name }} - {{ character.server }}</a></li>
-                            {% endfor %}
-                          {% endif %}
-                        <li><a class="dropdown-item" href="/user/id/{{ g.user.id }}/edit">Edit User</a></li>
+              <ul class="navbar-nav ms-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    {{g.user.username}}
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                      <li><a class="dropdown-item" href="/user/id/{{ g.user.id }}/edit">Edit User</a></li>
                         <form action="/user/id/{{ g.user.id }}/delete" method="POST" id="delete-user-form">
                           <li><a id="delete-user" class="dropdown-item">Delete User</a></li>
                         </form>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="/logout">Log Out</a></li>
-                        </ul>
-                    </li>
-                </ul>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="/logout">Log Out</a></li>
+                    </ul>
+                </li>
+              </ul>
             {% else %}
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/signup">Sign Up</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/login">Log In</a>
-                    </li>
-                </ul>
+              <ul class="navbar-nav ms-auto">
+                <li class="nav-item justify-content-end">
+                  <a class="nav-link" href="/signup">Sign Up</a>
+                </li>
+                <li class="nav-item justify-content-end">
+                  <a class="nav-link" href="/login">Log In</a>
+                </li>
+              </ul>
             {% endif %}
           </div>
         </div>
