--- a/templates/users/user_edit.html
+++ b/templates/users/user_edit.html
@@ -4,7 +4,7 @@
 <div class="row justify-content-md-center mt-5">
     <div class="col-md-7 col-lg-5">
       <form method="POST" id="user_form">
-        <h2 class="join-message">Edit {{ g.user.name }}</h2>
+        <h2 class="join-message">Edit {{ g.user.username }}</h2>
         {{ form.hidden_tag() }}
 
         {% for field in form if field.widget.input_type != 'hidden' %}
@@ -14,18 +14,14 @@
           {{ field(placeholder=field.label.text, class="form-control") }}
         {% endfor %}
 
-        
         {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-              <ul class=flashes>
-              {% for category, message in messages %}
-                <li class="{{ category }}">{{ message }}</li>
-              {% endfor %}
-              </ul>
-            {% endif %}
-          {% endwith %}
-          <br>
-        <button class="btn btn-primary btn-lg btn-block">Edit</button>
+          {% if messages %}
+            {% for category, message in messages %}
+              <p style="color: red; margin-top: 10px;">{{ message }}</p>
+            {% endfor %}
+          {% endif %}
+        {% endwith %}
+        <button class="btn btn-primary btn-md btn-block" style="margin-top: 15px;">Edit</button>
       </form>
     </div>
 </div>
